SERVER-17043 Reattempt failed socket connect when errno is EINTR